Changes to swagger documentation
